--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* --- Стили для кнопок фильтрации --- */
+/* ---01 Стили для кнопок фильтрации --- */
 .filter-btn {
     padding: 0.5rem 1rem;
     border-radius: 9999px; /* pill shape */
